fixed header nav text wrapping above 1000px

--- a/css/index.css
+++ b/css/index.css
@@ -225,8 +225,8 @@ header nav {
 header nav div {
   background: #36373A;
   border: 5px solid #7C7978;
-  height: 95%;
-  padding: 0 1rem;
+  height: 70%;
+  padding: 0 0.5rem;
   margin: 0 2%;
   display: flex;
   flex-direction: row;
@@ -234,10 +234,13 @@ header nav div {
   align-items: center;
   text-decoration: none;
 }
+header nav div h2 {
+  white-space: nowrap;
+}
 @media (max-width: 500px) {
   header nav div {
     height: 3rem;
-    margin: 0 1%;
+    margin: 0 3%;
   }
 }
 footer {
