--- a/less/global.less
+++ b/less/global.less
@@ -79,15 +79,19 @@ header {
         div {
             background: @dark-grey;
             border: 5px solid @grey;
-            height: 95%;
-            padding: 0 1rem;
+            height: 70%;
+            padding: 0 0.5rem;
             margin: 0 2%;
             .flex(row, center, center);
             text-decoration: none;
 
+            h2 {
+                white-space: nowrap;
+            }
+
             @media @mobile {
                 height: 3rem;
-                margin: 0 1%;
+                margin: 0 3%;
             }
         }
     }
